--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,3 @@
-<header class="flex items-center justify-center bg-gray-50 min-h-screen">
-  <div class="bg-white shadow-md rounded p-8">
-    <h1 class="text-3xl">Welcome Back!!!</h1>
-  </div>
+<header class="flex items-center justify-center bg-gray-50 h-screen p-8">
+  <app-expanded-cards />
 </header>
