Progress steps component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <header class="flex items-center justify-center bg-gray-50 h-screen p-8">
-  <app-expanded-cards />
+  <!-- <app-expanded-cards /> -->
+  <app-progress-steps />
 </header>
